--- a/styles/main.css
+++ b/styles/main.css
@@ -154,12 +154,14 @@ address {
 }
 /* header */
 .hero {
+  max-width: 1600px;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('/images/index/hero/Img.jpg');
+    url('../images/index/hero/Img.jpg');
   text-align: center;
   background-color: #c4c4c4;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   padding-top: 200px;
   padding-bottom: 200px;
   margin: 0 auto;
@@ -206,6 +208,29 @@ button.order-btn {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
+}
+.advantage-title::before {
+  content: '';
+  height: 120px;
+  display: block;
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+.antena::before {
+  background-image: url(../images/index/advantages/antenna\ 1.png);
+}
+.astronaut::before {
+  background-image: url(../images/index/advantages/astronaut\ 1.png);
+}
+.clock::before {
+  background-image: url(../images/index/advantages/clock\ 1.png);
+}
+.diagram::before {
+  background-image: url(../images/index/advantages/diagram\ 1.png);
 }
 .advantage-text {
   font-size: 14px;
