--- a/styles/main.css
+++ b/styles/main.css
@@ -64,7 +64,7 @@ address {
   bottom: 0;
   clip: rect(0 0 0 0);
 }
-.soc-link-item {
+.soc-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -74,8 +74,8 @@ address {
   cursor: pointer;
   fill: #afb1b8;
 }
-.soc-link-item:hover,
-.soc-link-item:focus {
+.soc-link:hover,
+.soc-link:focus {
   background-color: var(--primary-brand-color);
   fill: #ffffff;
 }
@@ -143,6 +143,8 @@ address {
   letter-spacing: 0.02em;
   color: var(--complementary-color);
   fill: #757575;
+  display: flex;
+  align-items: center;
 }
 .header-address-item > a:hover,
 .header-address-item > a:focus {
@@ -201,6 +203,18 @@ button.order-btn {
 .advantages-item:not(.advantages-item:nth-child(4n + 0)) {
   margin-right: 30px;
 }
+.advantages-item:nth-child(n + 5) {
+  margin-top: 30px;
+}
+.advantaes-thumb {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+  margin-bottom: 30px;
+  background: #f5f4fa;
+  border-radius: 4px;
+}
 .advantage-title {
   font-size: 14px;
   font-weight: bold;
@@ -208,29 +222,6 @@ button.order-btn {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
-}
-.advantage-title::before {
-  content: '';
-  height: 120px;
-  display: block;
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-  margin-bottom: 30px;
-}
-.antena::before {
-  background-image: url(../images/index/advantages/antenna\ 1.png);
-}
-.astronaut::before {
-  background-image: url(../images/index/advantages/astronaut\ 1.png);
-}
-.clock::before {
-  background-image: url(../images/index/advantages/clock\ 1.png);
-}
-.diagram::before {
-  background-image: url(../images/index/advantages/diagram\ 1.png);
 }
 .advantage-text {
   font-size: 14px;
@@ -240,16 +231,8 @@ button.order-btn {
   color: var(--complementary-color);
   width: 270px;
 }
-.advantaes-thumb {
-  padding: 25px 100px;
-  margin-bottom: 30px;
-  background: #f5f4fa;
-  border-radius: 4px;
-}
 .advantages-img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 /* advantages */
 .services-list {
@@ -258,6 +241,9 @@ button.order-btn {
 }
 .service-item:not(.service-item:nth-child(3n + 0)) {
   margin-right: 30px;
+}
+.service-item:nth-child(n + 4) {
+  margin-top: 30px;
 }
 /* services */
 .team {
@@ -274,6 +260,9 @@ button.order-btn {
 }
 .team-item:not(.team-item:nth-child(4n + 0)) {
   margin-right: 30px;
+}
+.team-item:nth-child(n + 5) {
+  margin-top: 30px;
 }
 .team-member-description {
   text-align: center;
@@ -296,7 +285,10 @@ button.order-btn {
 .team-member-list {
   display: flex;
   justify-content: center;
-  padding-top: 16px;
+  margin-top: 16px;
+}
+.footer-link > svg {
+  fill: #ffffff;
 }
 /* team */
 .footer {
@@ -309,10 +301,7 @@ button.order-btn {
 .footer-container > .logo {
   margin-bottom: 20px;
 }
-.footer-list {
-  display: flex;
-}
-.footer-item + .footer-item {
+.footer-links {
   margin-left: 70px;
 }
 address {
@@ -321,6 +310,7 @@ address {
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: #ffffff;
+  margin-top: 20px;
 }
 .footer-address-list {
   margin-top: 9px;
@@ -340,10 +330,10 @@ address {
   color: #ffffff;
   margin-bottom: 20px;
 }
-.footer-link-item {
+.footer-link {
   background-color: rgba(255, 255, 255, 0.1);
 }
-.footer-soc-link {
+.footer-link-item svg {
   fill: #ffffff;
 }
 /* footer */
@@ -385,11 +375,11 @@ button.example-btn:focus {
   display: flex;
   flex-wrap: wrap;
 }
-.examples-link-item {
-  background: #ffffff;
+.example-link {
+  display: block;
 }
-.examples-link-item:hover,
-.examples-link-item:focus {
+.example-link:hover,
+.example-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -406,6 +396,7 @@ button.example-btn:focus {
   padding: 20px 0;
   padding-left: 24px;
   padding-right: 24px;
+  color: #212121;
 }
 .example-name {
   font-weight: bold;
@@ -421,20 +412,27 @@ button.example-btn:focus {
   letter-spacing: 0.03em;
   color: var(--complementary-color);
 }
-.example-link {
-  color: #212121;
-}
 /* examples */
 .customers-list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .customers-item {
-  padding: 16px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 92px;
+  width: 170px;
   border: 1px solid #afb1b8;
   fill: #afb1b8;
   border-radius: 4px;
   cursor: pointer;
+}
+.customers-item:not(.customers-item:nth-child(6n + 0)) {
+  margin-right: 30px;
+}
+.customers-item:nth-child(n + 7) {
+  margin-top: 30px;
 }
 .customers-item:hover,
 .customers-item:focus {
