--- a/styles/main.css
+++ b/styles/main.css
@@ -98,6 +98,7 @@ address {
 }
 .soc-links-list {
   display: flex;
+  justify-content: space-between;
 }
 /* общие настройки */
 .header {
@@ -135,6 +136,7 @@ address {
 }
 .header-link {
   display: flex;
+  align-items: center;
   padding: 32px 0;
   font-weight: 500;
   line-height: 1.14;
@@ -182,11 +184,12 @@ address {
   text-transform: uppercase;
   color: var(--light-color);
 }
-button.order-btn {
+.order-btn {
   min-width: 200px;
   padding: 10px 16px;
   border-radius: 4px;
   border: none;
+  font-size: 16px;
   color: var(--light-color);
   background-color: var(--primary-brand-color);
   cursor: pointer;
@@ -220,6 +223,7 @@ button.order-btn {
 }
 .advantage-title {
   margin-bottom: 10px;
+  font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
   color: var(--dark-color);
@@ -243,23 +247,20 @@ button.order-btn {
 }
 .team-member-description {
   text-align: center;
-  padding: 30px 0;
+  padding: 30px;
 }
 .team-member-name {
   margin-bottom: 10px;
   font-weight: 500;
   color: var(--dark-color);
 }
+.team-member-position {
+  margin-bottom: 16px;
+}
 .team-member-name,
 .team-member-position {
   font-size: 16px;
   line-height: 1.18;
-}
-.team-member-list {
-  display: flex;
-  justify-content: center;
-  margin-top: 16px;
-  color: var(--tertiary-light-color);
 }
 .team-member-svg {
   fill: currentColor;
@@ -301,6 +302,7 @@ address {
   margin-bottom: 20px;
   font-weight: 700;
   line-height: 16px;
+  font-size: 14px;
   text-transform: uppercase;
   color: var(--light-color);
 }
@@ -324,7 +326,7 @@ address {
 .example-btn-item + .example-btn-item {
   margin-left: 8px;
 }
-button.example-btn {
+.example-btn {
   padding: 6px 22px;
   font-weight: 500;
   font-size: 16px;
@@ -335,16 +337,13 @@ button.example-btn {
   border-radius: 4px;
   border: none;
 }
-button.example-btn:hover,
-button.example-btn:focus {
+.active-btn,
+.example-btn:hover,
+.example-btn:focus {
   background-color: var(--primary-brand-color);
   color: var(--light-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-button.active-btn {
-  background-color: var(--primary-brand-color);
-  color: var(--light-color);
 }
 .examples-link-item {
   --card-item: 3;
@@ -383,14 +382,13 @@ button.active-btn {
   justify-content: center;
   align-items: center;
   height: 92px;
-  border: 1px solid;
+  border: 1px solid currentColor;
   border-radius: 4px;
   cursor: pointer;
 }
 .customer-link:focus,
 .customer-link:hover {
   color: var(--primary-brand-color);
-  border-color: var(--primary-brand-color);
 }
 .customer-svg {
   fill: currentColor;
